# tensorflow-haskell

./: stack.yaml
tensorflow-gym/: tensorflow-gym.cabal
tensorflow-gym/app/: Main.hs
tensorflow-mnist/: tensorflow-mnist.cabal
tensorflow-mnist/app/: Main.hs  Seq.hs
tensorflow-nn/: tensorflow-nn.cabal
tensorflow-ops/: tensorflow-ops.cabal
tensorflow-ops/src/TensorFlow/: Gradient.hs  Minimize.hs  Ops.hs  Optimizers.hs  Variable.hs
tensorflow/src/TensorFlow/: Nodes.hs
tensorflow/src/TensorFlow/Internal/: FFI.hs
