name:                tensorflow-gym
version:             0.1.0.0
synopsis:            TensorFlow demo application with openai gym.
description:         Please see README.md
homepage:            https://github.com/tensorflow/haskell#readme
license:             Apache
author:              TensorFlow authors
maintainer:          tensorflow-haskell@googlegroups.com
copyright:           Google Inc.
category:            Machine Learning
build-type:          Simple
cabal-version:       >=1.22

executable Main
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: app
  build-depends: base
               , bytestring
               , filepath
               , lens-family
               , proto-lens
               , tensorflow
               , tensorflow-ops
               , tensorflow-core-ops
               , tensorflow-proto
               , text
               , transformers
               , vector
               , gym-http-api
               , extra
               , random
  ghc-options: -O2 -threaded

source-repository head
  type:     git
  location: https://github.com/tensorflow/haskell
